media-dashboard/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-dashboard-ingress
  namespace: analytics-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: 3p-media-dashboard.dev.razorpay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media-dashboard
            port:
              number: 8000
